RESOLVED FIXED105038
[WK2 NetworkProcess] Crash when emptying cookie jar
https://bugs.webkit.org/show_bug.cgi?id=105038
Summary [WK2 NetworkProcess] Crash when emptying cookie jar
Alexey Proskuryakov
Reported 2012-12-14 09:41:07 PST
Crashes in Safari when emptying cookies, and probably in a few other cases. Regressed in r137647.
Attachments
proposed fix (7.62 KB, patch)
2012-12-14 09:43 PST, Alexey Proskuryakov
jberlin: review+
Alexey Proskuryakov
Comment 1 2012-12-14 09:43:13 PST
Created attachment 179493 [details] proposed fix
Alexey Proskuryakov
Comment 2 2012-12-14 09:43:32 PST
Alexey Proskuryakov
Comment 3 2012-12-14 09:54:37 PST
Note You need to log in before you can comment on or make changes to this bug.