        <rdar://problem/12880750> RGRESSION: Crash when emptying cookie jar         https://bugs.webkit.org/show_bug.cgi?id=105038

Reviewed by Jessie Berlin.

        Handle null context, which is used for cookie management functions.

        * WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:
        (WebKit::WebPlatformStrategies::cookiesForDOM):
        (WebKit::WebPlatformStrategies::setCookiesFromDOM):
        (WebKit::WebPlatformStrategies::cookiesEnabled):
        (WebKit::WebPlatformStrategies::cookieRequestHeaderFieldValue):
        (WebKit::WebPlatformStrategies::getRawCookies):
        (WebKit::WebPlatformStrategies::deleteCookie):
        (WebKit::WebPlatformStrategies::getHostnamesWithCookies):
        (WebKit::WebPlatformStrategies::deleteCookiesForHostname):
        (WebKit::WebPlatformStrategies::deleteAllCookies):



Canonical link: https://commits.webkit.org/123273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137752 268f45cc-cd09-0410-ab3c-d52691b4dbfc